--- a/wol-ctrl/pyproject.toml
+++ b/wol-ctrl/pyproject.toml
@@ -12,6 +12,9 @@ pytest = "^8.1.1"
 coverage = "^7.4.4"
 
 
+[tool.poetry.group.dev.dependencies]
+pylint = "^3.1.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
