--- a/wol-ctrl/pyproject.toml
+++ b/wol-ctrl/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 invoke = "^2.2.0"
 pytest = "^8.1.1"
 coverage = "^7.4.4"
+werkzeug = "^3.0.2"
 
 
 [tool.poetry.group.dev.dependencies]
